--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "5.0.7",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
+    "react-router-scroll-top": "^0.1.1",
     "react-scripts": "1.1.4",
     "redux": "4.0.0",
     "redux-logger": "3.0.6",
