--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "axios": "0.18.0",
+    "firebase": "^5.4.0",
     "lodash": "4.17.10",
     "normalize.css": "8.0.0",
     "prop-types": "15.6.2",
