--- a/.prettierrc
+++ b/.prettierrc
@@ -4,8 +4,8 @@
   "useTabs": false,
   "semi": true,
   "singleQuote": false,
-  "trailingComma": "none",
+  "trailingComma": "es5",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "fluid": false
+  "fluid": true
 }
