--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "querystring": "0.2.0",
     "react": "16.4.1",
     "react-dom": "16.4.1",
+    "react-firebaseui": "^3.0.6",
     "react-helmet": "5.2.0",
     "react-redux": "5.0.7",
     "react-router": "4.3.1",
