--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "^3.1.0",
     "axios": "0.18.0",
     "firebase": "^5.4.0",
     "lodash": "4.17.10",
