--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "main": "src/index.js",
   "dependencies": {
     "@material-ui/core": "^3.1.0",
+    "@material-ui/icons": "^3.0.1",
+    "animated": "^0.2.2",
     "axios": "0.18.0",
     "firebase": "^5.4.0",
     "lodash": "4.17.10",
@@ -21,6 +23,7 @@
     "react-router-dom": "4.3.1",
     "react-router-scroll-top": "^0.1.1",
     "react-scripts": "1.1.4",
+    "react-transition-group": "^2.4.0",
     "redux": "4.0.0",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0"
