--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-scroll-top": "^0.1.1",
     "react-scripts": "1.1.4",
     "react-transition-group": "^2.4.0",
+    "recompose": "^0.30.0",
     "redux": "4.0.0",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0"
