--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^3.0.1",
     "animated": "^0.2.2",
     "axios": "0.18.0",
+    "classnames": "^2.2.6",
     "firebase": "^5.4.0",
     "lodash": "4.17.10",
     "normalize.css": "8.0.0",
