--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "react-router-scroll-top": "^0.1.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "2.0.0",
     "react-transition-group": "^2.4.0",
     "recompose": "^0.30.0",
     "redux": "4.0.0",
@@ -36,5 +36,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
