--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.6",
     "firebase": "^5.4.0",
     "lodash": "4.17.10",
+    "node-sass": "^4.9.3",
     "normalize.css": "8.0.0",
     "prop-types": "15.6.2",
     "querystring": "0.2.0",
