--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animated": "^0.2.2",
     "axios": "0.18.0",
     "classnames": "^2.2.6",
+    "connected-react-router": "^4.5.0",
     "firebase": "^5.4.0",
     "lodash": "4.17.10",
     "node-sass": "^4.9.3",
