--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "recompose": "^0.30.0",
     "redux": "4.0.0",
     "redux-logger": "3.0.6",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "slugify": "^1.3.1"
   },
   "devDependencies": {},
   "scripts": {
