--- a/package.json
+++ b/package.json
@@ -51,5 +51,6 @@
   ],
   "jest": {
     "snapshotSerializers": ["enzyme-to-json/serializer"]
-  }
+  },
+  "setupFiles": ["./src/setupTests.js"]
 }
